Se agrego el CV para que pueda ser descargado

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Portfolio Daniel Esparza</title>
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#cabecera" data-bs-offset="0" >
+<body data-bs-spy="scroll" data-bs-target="#barraNavegacion" data-bs-offset="0" >
   
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="cabecera">
         <div class="container-fluid">
@@ -62,7 +62,7 @@
                             <p id="presentacion">Soy un desarrollador de software full stack con conocimiento en diseño gráfico.</p>
                             <p>Estudiante del Instituto Tecnológico José Mario Molina Pasquel y Henríquez Campus Lagos de Moreno, Jalisco, México 
                                 de la carrera de Ingeniería en Sistemas Computacionales.</p>
-                            <a download href="">
+                            <a download href="/archivos/RESUME_Daniel Esparza Diaz.pdf">
                                 <button class="descargar-cv">RESUME</button>
                             </a>
                         </div>
