Se agregaron los proyectos de boxbook, mantenimientos de laboratorios y preguntas y respuestas

--- a/index.html
+++ b/index.html
@@ -77,6 +77,57 @@
             <h2>MI TRABAJO</h2>
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-2 g-4">
+                  <div class="col">
+                    <div class="card text-center">
+                      <img src="imagenes/boxbook1.JPG" class="card-img-top" alt="Imagen de interfaz de boxbook">
+                      <div class="card-body">
+                        <h4 class="card-title">BoxBook</h4>
+                        <p class="card-text">Es una plataforma web creada en NodeJS para el registro de lecturas de libros donde los usuarios pueden actualizar sus lecturas diarias,
+                          pueden comentar y calificar acerca de un libro, y pueden compartir con otros usuarios de la plataforma.
+                        </p>
+                        <a href="https://github.com/DanielSparza/BoxBook" target="_blank">
+                          <img class="migithub" src="iconos/github.png" alt="icono de github">
+                        </a>
+                        <a href="https://boxbook-readings.herokuapp.com/" target="_blank">
+                          <img class="webtest" src="iconos/web.png" alt="icono de web">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card text-center">
+                      <img src="imagenes/mantenimientos1.jpg" class="card-img-top" alt="Imagen de interfaz de mantenimientos">
+                      <div class="card-body">
+                        <h4 class="card-title">Mantenimientos de equipo de computo</h4>
+                        <p class="card-text">Es una plataforma web creada en NodeJS para el control de mantenimientos de equipos de computo la cual cuenta con dos tipos de usuario, el usuario común
+                           que es el que solicita los mantenimientos de los equipos a traves de un ticket y es el que da el seguimiento, y el administrador quien es el que autoriza o no los tickets, entre otras cosas.
+                        </p>
+                        <a href="https://github.com/DanielSparza/MantenimientoLaboratorio" target="_blank">
+                          <img class="migithub" src="iconos/github.png" alt="icono de github">
+                        </a>
+                        <a href="https://mantenimiento-laboratorios.herokuapp.com/" target="_blank">
+                          <img class="webtest" src="iconos/web.png" alt="icono de web">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card text-center">
+                      <img src="imagenes/preguntas1.jpg" class="card-img-top" alt="Imagen de interfaz de preguntas y respuestas">
+                      <div class="card-body">
+                        <h4 class="card-title">Preguntas y Respuestas</h4>
+                        <p class="card-text">Es una plataforma web creada en NodeJS donde los usuarios pueden consultar preguntas relacionadas al area de tecnologia y ver las respuestas que otros usuarios han realizado, 
+                          tambien pueden crear una cuenta y publicar sus propias preguntas y respuestas, asi como calificar las respuestas de otros usuarios.
+                        </p>
+                        <a href="https://github.com/DanielSparza/PreguntasYRespuestas" target="_blank">
+                          <img class="migithub" src="iconos/github.png" alt="icono de github">
+                        </a>
+                        <a href="https://questions-answers-forum.herokuapp.com/" target="_blank">
+                          <img class="webtest" src="iconos/web.png" alt="icono de web">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
                     <div class="col">
                       <div class="card text-center">
                         <img src="imagenes/TacosDonAlfredWeb.jpg" class="card-img-top" alt="imagen de interfaz web tacos Don Alfred">
@@ -102,33 +153,6 @@
                           <a href="https://github.com/DanielSparza" target="_blank">
                             <img class="migithub" src="iconos/github.png" alt="icono de github">
                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="card text-center">
-                        <img src="imagenes/AutosTec.jpg" class="card-img-top" alt="Imagen de interfaz AutosTec">
-                        <div class="card-body">
-                          <h4 class="card-title">Autos Tec</h4>
-                          <p class="card-text">Es una aplicación web desarrollada para el Instituto Tecnológico José Mario Molina Pasquel y Henríquez campus Lagos de Moreno a trevés
-                              de un equipo de celula de desarrollo para permitir registrar las salidas y entradas de vehiculos de la institución asi como poder programar el mantenimiento de los mismos.
-                          </p>
-                          <a href="https://github.com/DanielSparza" target="_blank">
-                            <img class="migithub" src="iconos/github.png" alt="icono de github">
-                         </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="card text-center">
-                        <img src="imagenes/tecnoeduca.jpg" class="card-img-top" alt="Imagen de interfaz TecnoEduca">
-                        <div class="card-body">
-                          <h4 class="card-title">TecnoEduca</h4>
-                          <p class="card-text">Es un ejemplo de página web para una escuela de cursos online desarrollada solo con html, css, javascript y utilizando el framework bootstrap,
-                              cuenta con un formulario de contacto para la postulación de profesores e implementa el uso de modales.</p>
-                          <a href="https://github.com/DanielSparza" target="_blank">
-                            <img class="migithub" src="iconos/github.png" alt="icono de github">
-                          </a>
                         </div>
                       </div>
                     </div>
